# sci-novel-project

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  run_local.cmd  run_local.ps1  scifi_novel.db  test_local.cmd  test_local.ps1
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: admin.py  auth.py  health.py  orders.py  site.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/middleware/: request_context.py
backend/app/models/: audit.py  base.py  catalog.py  novel.py  order.py  site_profile.py  user.py
backend/app/schemas/: admin.py  auth.py  catalog.py  orders.py  site.py
backend/app/services/: admin_service.py  auth_service.py  catalog_service.py  email_service.py  log_service.py  novel_admin_service.py  order_service.py  seed_service.py  upload_service.py  user_service.py
backend/scripts/: backup_db.py
backend/tests/: test_app.py
docs/: architecture.md  delivery-scope.md  deployment.zh-CN.md  ui-ux.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ConfirmDialog.tsx  DataTable.tsx  Header.tsx  Icons.tsx  MetricCard.tsx  NoticeDialog.tsx  StatePanel.tsx  Toast.tsx
frontend/src/data/: mock.ts  types.ts
frontend/src/lib/: i18n.ts
frontend/src/pages/: AdminPage.tsx  LogsPage.tsx  NotFoundPage.tsx  ShopHome.tsx
frontend/src/styles/: index.css
